Changelog v5.1.61 (2024-02-09):
- Added Clearlogos to Episode Meta

Changelog v5.1.60 (2024-02-08):
- Fixed Small bug with Torrents
- Changed Sync Setting Default

Changelog v5.1.59 (2024-02-05):
- Fixed Autoplay for Embeds

Changelog v5.1.58 (2024-02-04):
- Fixed Gogo

Changelog v5.1.57 (2024-02-03):
- Improved Cloud Scraping
- Improved Local Scraping
- Improved Filtering

Changelog v5.1.56 (2024-02-02):
- Improved the crap out of Debrid Scraping
- Small Fix for Premiumize
- Fixed major episode meta bug
- Moved some files around

Changelog v5.1.55 (2024-02-01):
- Added Configuration for Embed Servers

Changelog v5.1.54 (2024-01-30):
- Added MP2T Support for InputStream Helper
- Fixed Gogo Backup Function
- Fixed Aniwave Streams
- Fixed Imports
- Linting

Changelog v5.1.53 (2024-01-27):
- Added New ViewType Setting

Changelog v5.1.52 (2024-01-26):
- Fix bug with Mal Calendar

Changelog v5.1.51 (2024-01-26):
- Requests are a lot faster now
- Removed Request Module
- Removed Six Module
- Fix bugs with some logins
- Fixed Clear Search History Button

Changelog v5.1.50 (2024-01-22):
- Added Paging to Animetosho

Changelog v5.1.49 (2024-01-21):
- Fixed Anilist Genres & Tags
- Fixed Smart Resolver 
- Fixed Resolving Last Source
- Fixed Info field on resolver page
- Relabeled Scrapping to Scraping

Changelog v5.1.48 (2024-01-20):
- Added Individual properties for each ID
- Added Trakt Script Support
- Added a4kSubtitles Support

Changelog v5.1.47 (2024-01-17):
- Fixed Uncached Sources for TorBox

Changelog v5.1.46 (2024-01-16):
- Recoded Uncached Sources for every debrid
- Fixed Most Issues with every debrid
- Added Cached & Uncached Fallbacks to Source Select
- Added Auto-Delete Torrents Option for each debrid
- Added 3 New Settings to Premiumize
- Added New Uncached Setting in Scraping
- Modified a couple of setting defaults

Changelog v5.1.45 (2024-01-14):
- Added Cached & Uncached Button to Source Select
- Added Resolve Uncached to TorBox