@@ -1,3 +1,6 @@
+Changelog v5.1.62 (2024-02-10):
+- Added ability to change Anilist Posters to Mal Posters
+
 Changelog v5.1.61 (2024-02-09):
 - Added Clearlogos to Episode Meta
 
